--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fbcomponent",
-  "homepage" : "https://github.com/azharkhan1/FB-Delete-Post-Update.git",
+  "homepage" : "https://azharkhan1.github.io/FB-Delete-Post-Update",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
